<resources>
    <string name="app_name">NFC2</string>
    <string name="reactor">Reactor</string>
    <string name="read">Press this button to read:</string>
    <string name="write">Press this button to write:</string>
    <string name="read_nfc">Read from NFC</string>
    <string name="write_nfc">Write to NFC</string>
    <string name="input_text">Input text to send here…</string>
    <string name="test">test</string>
</resources>